added link to icon on top

--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -35,7 +35,7 @@
       <button mat-icon-button> <mat-icon style="color:white" (click)="sidenav.toggle()" class="material-icons">
         menu</mat-icon>
       </button>
-      <img class ="ultimate-icon" src="/assets/ultiu.svg">
+      <img routerLink="/" class ="ultimate-icon" src="/assets/ultiu.svg">
       Ignite Design System Playground
     </mat-toolbar>
     <div id ="body-container">
