--- a/demo-app/app/testing/components/status/status.component.scss
+++ b/demo-app/app/testing/components/status/status.component.scss
@@ -15,7 +15,7 @@
 .status-container {
     max-width: 1250px;
     margin: auto;
-    
+
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 1fr;
     grid-template-rows: repeat(6, auto);
@@ -80,6 +80,9 @@ and (max-width: 970px) {
         "header"
         "image"
         "commit";
+
+    min-height: 0;  /* NEW */
+    min-width: 0; 
 }
 
 .g-sub-header {
@@ -92,7 +95,7 @@ and (max-width: 970px) {
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas: 
-        "image author . . . ."
+        "image author . . . .";
 }
 
 .g-sub-image > .image-section {
