--- a/demo-app/app/testing/components/status/status.component.html
+++ b/demo-app/app/testing/components/status/status.component.html
@@ -131,18 +131,27 @@
 
     <section aria-label="component" class="component-g">
         <h1>Component Test Details</h1>
-        <h4>Last Run Date: {{ buildData.startTime | date }}</h4>
+        <h4>Last Run: {{ buildData.startTime | date }}</h4>
         <mat-card class="component-body">
-            <mat-expansion-panel hideToggle="'false'" *ngFor="let build of componentList" [ngStyle]="{'border-right': '5px solid ' + componentStatusColor(build)}">
+            <mat-expansion-panel hideToggle="'false'" *ngFor="let build of componentList" [ngStyle]="{'border-right': '10px solid ' + componentStatusColor(build)}">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
-                        <h3>{{ build.assertionResults[0].ancestorTitles[0] }}</h3>
+                        <h2>{{ build.assertionResults[0]?.ancestorTitles[0] }}</h2>
                     </mat-panel-title>
                 </mat-expansion-panel-header>
+                <div id="component-test-case" *ngFor="let test of build.assertionResults">
+                    <h3>Test Case</h3>
+                    <p>{{ test?.title }}</p>
+                    <h3>Status</h3>
+                    <p>{{ test?.status }}</p>
+                    <div *ngIf="test.failureMessages.length > 0">
+                        <h3>Failure Messages</h3>
+                        <p *ngFor="let message of test.failureMessages">
+                            {{ message }}
+                        </p>
+                    </div>
+                </div>
             </mat-expansion-panel>
-            <div>
-                <!--TODO ADD THE CONTENTS OF THE BUILD INTO THIS SECTION-->
-            </div>
         </mat-card>
     </section>
 </div>
