--- a/demo-app/app/testing/components/status/status.component.scss
+++ b/demo-app/app/testing/components/status/status.component.scss
@@ -178,7 +178,7 @@ mat-panel-description {
 
     display: grid;
     justify-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(1000px, 1fr));
     grid-gap: 15px;
 }
 
@@ -187,6 +187,12 @@ mat-panel-description {
 }
 
 .component-body > mat-expansion-panel {
-    width: 300px;
+    width: 1000px;
     min-height: 40px;
+
+}
+
+#component-test-case {
+    display: flex;
+    flex-direction: column;
 }
