--- a/demo-app/app/testing/components/snapshot/snapshot.component.html
+++ b/demo-app/app/testing/components/snapshot/snapshot.component.html
@@ -6,12 +6,12 @@
     <p>Set component data members that are in template to static values (ex. Date.now() would be different every run).</p>
     <mat-card class='code-block-card'>
         <pre>
-            <code class="code-block">
-it('should match snapshot', async () => {{ '{' }}
-    component.description = 'test description';
+            <code class="code-block line">
+it(<span class="string">'should match snapshot'</span>, <span class="keyword">async</span> () => {{ '{' }}
+    component.description = <span class="string">'test description'</span>;
     Date.now = jest.fn(() => 1482363367071);
 
-    await fixture.detectChanges();
+    <span class="keyword">await</span> fixture.detectChanges();
 
     expect(fixture).toMatchSnapshot();
 });
@@ -22,14 +22,14 @@ it('should match snapshot', async () => {{ '{' }}
     <p>Now we can expect this date value to consistently return the same value every run.</p>
     <mat-card class='code-block-card'>
         <pre>
-            <code class="code-block">
-&lt;div class="date-output"&gt;{{ '{' }}{{ '{' }} date }}&lt;/div&gt;
+            <code class="code-block line">
+&lt;div class=<span class="string">"date-output"</span>&gt;{{ '{' }}{{ '{' }} date }}&lt;/div&gt;
 &lt;a
-    (click)="handleClick($event)"
-    class="app-link"
+    (click)=<span class="string">"handleClick($event)"</span>
+    class=<span class="string">"app-link"</span>
 &gt;
-    &lt;i class="material-icons app-link-icon" aria-hidden="true"&gt;{{ '{' }}{{ '{' }} icon }}&lt;/i&gt;
-    &lt;div class="app-link-text"&gt;{{ '{' }}{{ '{' }} description }}&lt;/div&gt;
+    &lt;i class=<span class="string">"material-icons app-link-icon"</span> aria-hidden=<span class="string">"true"</span>&gt;{{ '{' }}{{ '{' }} icon }}&lt;/i&gt;
+    &lt;div class=<span class="string">"app-link-text"</span>&gt;{{ '{' }}{{ '{' }} description }}&lt;/div&gt;
 &lt;/a&gt;
             </code>
         </pre>
