--- a/demo-app/app/testing/components/test-types/test-types.component.html
+++ b/demo-app/app/testing/components/test-types/test-types.component.html
@@ -6,15 +6,15 @@
     <p>Test the JavaScript file in isolation and mock out services as you need them. Unit Tests don't use the Angular Testing Utilities. (*.unit.spec.ts)</p>
     <mat-card class='code-block-card'>
         <pre>
-            <code class="code-block">
-describe('AppComponent', () => {{ '{' }}
-    let component: AppComponent;
+            <code class="code-block line">
+describe(<span class="string">'AppComponent'</span>, () => {{ '{' }}
+    <span class="keyword">let</span> component: AppComponent;
 
     beforeEach(() => {{ '{' }}
-        component = new AppComponent();
+        component = <span class="keyword">new</span> AppComponent();
     });
 
-    it('should be truthy', () => {{ '{' }}
+    it(<span class="string">'should be truthy'</span>, () => {{ '{' }}
         expect(component).toBeTruthy();
     });
 });
@@ -26,13 +26,13 @@ describe('AppComponent', () => {{ '{' }}
     <p>Use the Angular Testing Utilities to generate the Angular environment to test. Check JavaScript integration with the template. Mock out services as you need them. (*.spec.ts)</p>
     <mat-card class='code-block-card'>
         <pre>
-            <code class="code-block">
-describe('AppComponent', () => {{ '{' }}
-    let fixture: ComponentFixture&lt;AppComponent&gt;;
-    let component: AppComponent;
+            <code class="code-block line">
+describe(<span class="string">'AppComponent'</span>, () => {{ '{' }}
+    <span class="keyword">let</span> fixture: ComponentFixture&lt;AppComponent&gt;;
+    <span class="keyword">let</span> component: AppComponent;
 
-    beforeEach(async () => {{ '{' }}
-        await TestBed.configureTestingModule({{ '{' }}
+    beforeEach(<span class="keyword">async</span> () => {{ '{' }}
+        <span class="keyword">await</span> TestBed.configureTestingModule({{ '{' }}
             declarations: [AppComponent],
             imports: [],
             providers: []
@@ -46,7 +46,7 @@ describe('AppComponent', () => {{ '{' }}
         fixture.detectChanges();
     });
 
-    it('should be truthy', () => {{ '{' }}
+    it(<span class="string">'should be truthy'</span>, () => {{ '{' }}
         expect(component).toBeTruthy();
     });
 });
@@ -58,18 +58,18 @@ describe('AppComponent', () => {{ '{' }}
     <p>Testing the application as a whole. Simulate a user through real world scenarios. (*.e2e-spec.ts)</p>
     <mat-card class='code-block-card'>
         <pre>
-            <code class="code-block">
-describe('test-app1 App', () => {{ '{' }}
-    let page: AppPage;
+            <code class="code-block line">
+describe(<span class="string">'test-app1 App'</span>, () => {{ '{' }}
+    <span class="keyword">let</span> page: AppPage;
 
     beforeEach(() => {{ '{' }}
-        page = new AppPage();
+        page = <span class="keyword">new</span> AppPage();
     });
 
-    it('should display welcome message', () => {{ '{' }}
+    it(<span class="string">'should display welcome message'</span>, () => {{ '{' }}
         page.navigateTo();
 
-        expect(page.getParagraphTest()).toEqual('Welcome to app!');
+        expect(page.getParagraphTest()).toEqual(<span class="string">'Welcome to app!'</span>);
     });
 });
             </code>
@@ -79,13 +79,13 @@ describe('test-app1 App', () => {{ '{' }}
     <p>Will serialize component and create reference image. When snapshot test is run, it will fail if the two images do not match. (*.spec.ts)</p>
     <mat-card class='code-block-card'>
         <pre>
-            <code class="code-block">
-exports[`renders correctly 1`] = `
+            <code class="code-block line">
+exports[<span class="string">`renders correctly 1`</span>] = `
 &lt;a
-    className="normal"
-    href="http://www.facebook.com"
-    onMouseEnter={{ '{' }}[Function]}
-    onMouseLeave={{ '{' }}[Function]}
+    className=<span class="string">"normal"</span>
+    href=<span class="string">"http://www.facebook.com"</span>
+    onMouseEnter={{ '{' }}[<span class="keyword">Function</span>]}
+    onMouseLeave={{ '{' }}[<span class="keyword">Function</span>]}
 &gt;
     Facebook
     &lt;/a&gt;
@@ -95,18 +95,18 @@ exports[`renders correctly 1`] = `
     </mat-card>
     <mat-card class='code-block-card'>
         <pre>
-            <code class="code-block">
+            <code class="code-block line">
 Received value does not match stored snapshot 1.
 
 - Snapshot
 + Received
 
 &gt;a
-    className="normal"
--   href="http://facebook.com"
-+   href="http://instagram.com"
-    onMouseEnter={{ '{' }}[Function]}
-    onMouseLeave={{ '{' }}[Function]}&gt;
+    className=<span class="string">"normal"</span>
+-   href=<span class="string">"http://facebook.com"</span>
++   href=<span class="string">"http://instagram.com"</span>
+    onMouseEnter={{ '{' }}[<span class="keyword">Function</span>]}
+    onMouseLeave={{ '{' }}[<span class="keyword">Function</span>]}&gt;
 -   Facebook
 +   Instagram
 &lt;a&gt;
