--- a/demo-app/app/testing/components/testing.scss
+++ b/demo-app/app/testing/components/testing.scss
@@ -15,3 +15,24 @@ pre {
     background-color: #EFF2F4;
     margin: 0.5em;
   }
+
+  .tag {
+    color: #297367;
+  }
+
+  .string {
+    color: #42b983;
+  }
+
+  .line {
+    min-height: 1.5em;
+    color: #2973b7;
+  }
+
+  .keyword {
+    color: #e96900;
+  }
+
+  .comment {
+    color: #ae81ff;
+  }
