preparing branch for PR

--- a/demo-app/app/testing/components/asynchronous/asynchronous.component.html
+++ b/demo-app/app/testing/components/asynchronous/asynchronous.component.html
@@ -50,7 +50,7 @@
     <mat-card class='code-block-card'>
         <pre>
             <code class="code-block line">
-<span class="keyword">it</span>(<span class="string">'should return the edited unit data'</span>, <span class="keyword">fakeAsync</span>,(() => {{ '{' }}
+it(<span class="string">'should return the edited unit data'</span>, <span class="keyword">fakeAsync</span>,(() => {{ '{' }}
     <span class="keyword">let</span> data = {{ '{' }}};
     <span class="keyword">let</span> dialogRef = <span class="keyword">this</span>.dialog.open(Component, {{ '{' }}data: data});
     <span class="keyword">let</span> spy = jest.fn();
