--- a/demo-app/app/testing/components/asynchronous/asynchronous.component.html
+++ b/demo-app/app/testing/components/asynchronous/asynchronous.component.html
@@ -8,14 +8,14 @@
     <mat-card class='code-block-card'>
         <pre>
             <code class="code-block line">
-<span class="keyword">it</span>(<span class="string">'should set endDate html element'</span>, <span class="keyword">async</span> (() => {{ '{' }}
+it(<span class="string">'should set endDate html element'</span>, <span class="keyword">async</span> (() => {{ '{' }}
     <span class="keyword">let</span> de = fixture.debugElement.query(By.css('#end-date-input'));
     <span class="keyword">let</span> ne: HTMLInputElement = de.nativeElement;
 
     component.endDate = <span class="string">'2019-12-12'</span>;
     fixture.detectChanges();
 
-    fixture.whenStable().<span class="keyword">then</span>(() => {{ '{' }}
+    fixture.whenStable().then(() => {{ '{' }}
         expect(ne.value).toEqual(component.endDate);
     });
 }));
@@ -29,7 +29,7 @@
     <mat-card class='code-block-card'>
         <pre>
             <code class="code-block line">
-<span class="keyword">it</span>(<span class="string">'should set endDate html element'</span>, <span class="keyword">fakeAsync</span> (() => {{ '{' }}
+it(<span class="string">'should set endDate html element'</span>, fakeAsync (() => {{ '{' }}
     <span class="keyword">let</span> de = fixture.debugElement.query(<span class="keyword">By</span>.css(<span class="string">'#end-date-input'</span>));
     <span class="keyword">let</span> ne: HTMLInputElement = de.nativeElement;
 
@@ -50,7 +50,7 @@
     <mat-card class='code-block-card'>
         <pre>
             <code class="code-block line">
-it(<span class="string">'should return the edited unit data'</span>, <span class="keyword">fakeAsync</span>,(() => {{ '{' }}
+it(<span class="string">'should return the edited unit data'</span>, fakeAsync,(() => {{ '{' }}
     <span class="keyword">let</span> data = {{ '{' }}};
     <span class="keyword">let</span> dialogRef = <span class="keyword">this</span>.dialog.open(Component, {{ '{' }}data: data});
     <span class="keyword">let</span> spy = jest.fn();
