--- a/demo-app/app/testing/components/testing.scss
+++ b/demo-app/app/testing/components/testing.scss
@@ -4,6 +4,10 @@ pre {
     width: min-content;
     height: min-content;
   }
+
+.code-test {
+  font-family: Courier New, Courier, monospace;
+}
   
 .code-block {
     font-family: Courier New, Courier, monospace;
