--- a/demo-app/app/testing/components/testing.scss
+++ b/demo-app/app/testing/components/testing.scss
@@ -19,3 +19,8 @@ pre {
     background-color: #EFF2F4;
     margin: 0.5em;
   }
+
+.this-class-sucks {
+  width: min-content;
+  height: min-content;
+}
