Making sure yarn is working with yarn install before PRing

--- a/demo-app/app/common/stat-card/stat-card.scss
+++ b/demo-app/app/common/stat-card/stat-card.scss
@@ -20,7 +20,7 @@
     min-height: 40px;
     width: 260px;
     text-decoration: none;
-    box-shadow: 0px 0px 10px 1px rgb(119, 136, 153);
+    box-shadow: 0px 0px 10px 1px rgba(119, 136, 153, 0.75);
 }
 
 .stat-card:hover {
