--- a/src/info-banner/info-banner.scss
+++ b/src/info-banner/info-banner.scss
@@ -1,7 +1,9 @@
+@import '~ignite-common/styles/ignite';
+
 :host {
   display: block;
   padding: 16px 16px;
-  color: #0061ff;
-  background: #EEEEEE;
+  color: ign-color(accent);
+  background: ign-color(light);
   margin-bottom: 1em;
 }
