--- a/src/card/card-toolbar/card-toolbar.scss
+++ b/src/card/card-toolbar/card-toolbar.scss
@@ -1,3 +1,5 @@
+@import '~ignite-common/styles/ignite';
+
 :host {
   display: flex;
   justify-content: space-between;
@@ -16,7 +18,7 @@
 
 :host /deep/ button {
   text-transform: uppercase;
-  color: #0076CE;
+  color: ign-color(accent);
 }
 
 :host /deep/ mat-icon {
