--- a/src/error-banner/error-banner.scss
+++ b/src/error-banner/error-banner.scss
@@ -1,6 +1,8 @@
+@import '~ignite-common/styles/ignite';
+
 :host {
   display: block;
   padding: 24px 16px;
-  color: #D50000;
-  background: #EEEEEE;
+  color: ign-color(danger);
+  background: ign-color(light);
 }
