--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -1,4 +1,5 @@
-$text-secondary-color: rgba(0, 0, 0, 0.54);
+@import '~ignite-common/styles/ignite';
+
 $text-secondary-font-size: 12px;
 $text-secondary-font-weight: 400;
 
@@ -14,5 +15,5 @@ $text-secondary-font-weight: 400;
 .footer-text {
   font-size: $text-secondary-font-size;
   font-weight: $text-secondary-font-weight;
-  color: $text-secondary-color;
+  color: ign-color(text-secondary);
 }
