--- a/src/list-selection/list-selection-search/list-selection-search.scss
+++ b/src/list-selection/list-selection-search/list-selection-search.scss
@@ -1,9 +1,13 @@
+@import '~ignite-common/styles/ignite';
+
 .container {
   display: flex;
   align-items: center;
   flex: 1;
   height: 64px;
-  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.4);
+  //TODO: RGBA COLORS
+  //box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 9px 0px ign-palette($ign-palette-gray, 400);
   margin-bottom: 4px;
   padding-left: 16px;
 }
