--- a/src/sidenav/sidenav-header/sidenav-header.scss
+++ b/src/sidenav/sidenav-header/sidenav-header.scss
@@ -1,10 +1,14 @@
+@import '~ignite-common/styles/ignite';
+
 .header-container {
-  color: #ffffff;
-  background-color: #4A4A4A;
+  color: ign-color('white');
+  background-color: ign-color(dark);
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 11px;
-  box-shadow: 0 1px 8px 0 rgba(0,0,0,0.20);
+  box-shadow: 0 1px 8px 0 ign-palette($ign-palette-gray, 300);
+  //TODO: RGBA COLORS
+  //box-shadow: 0 1px 8px 0 rgba(0,0,0,0.20);
 }
 
 .user-profile-container {
